@@ -1,7 +1,5 @@
 package de.muenchen.oss.praktikumsplaner.configuration.filter.nfcconverter;
 
-import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
-import edu.umd.cs.findbugs.annotations.SuppressMatchType;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.ServletInputStream;
 import jakarta.servlet.http.Cookie;
@@ -12,6 +10,7 @@ import java.io.BufferedReader;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
@@ -19,8 +18,6 @@ import java.util.Enumeration;
 import java.util.List;
 import java.util.Map;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.collections4.IteratorUtils;
-import org.apache.commons.io.IOUtils;
 
 /**
  * Wrapper for HttpServletRequest that performs NFC conversion.
@@ -66,13 +63,13 @@ public class NfcRequest extends HttpServletRequestWrapper implements HttpServlet
     public Enumeration<String> getHeaders(final String name) {
         convert();
         final List<String> values = this.headers.get(NfcHelper.nfcConverter(name));
-        return (values == null) ? Collections.emptyEnumeration() : IteratorUtils.asEnumeration(values.iterator());
+        return (values == null) ? Collections.emptyEnumeration() : Collections.enumeration(values);
     }
 
     @Override
     public Enumeration<String> getHeaderNames() {
         convert();
-        return IteratorUtils.asEnumeration(this.headers.keySet().iterator());
+        return Collections.enumeration(this.headers.keySet());
     }
 
     @Override
@@ -149,7 +146,7 @@ public class NfcRequest extends HttpServletRequestWrapper implements HttpServlet
     @Override
     public Enumeration<String> getParameterNames() {
         convert();
-        return IteratorUtils.asEnumeration(this.params.keySet().iterator());
+        return Collections.enumeration(this.params.keySet());
     }
 
     @Override
@@ -181,7 +178,6 @@ public class NfcRequest extends HttpServletRequestWrapper implements HttpServlet
         return getOriginalRequest().getParts();
     }
 
-    @SuppressFBWarnings(value = "DM_DEFAULT_ENCODING", matchType = SuppressMatchType.EXACT)
     @Override
     public ServletInputStream getInputStream() throws IOException {
 
@@ -189,12 +185,12 @@ public class NfcRequest extends HttpServletRequestWrapper implements HttpServlet
 
         final String content;
         try (InputStream is = getOriginalRequest().getInputStream()) {
-            content = new String(IOUtils.toByteArray(is), encoding);
+            content = new String(is.readAllBytes(), encoding);
         }
 
         log.debug("Converting InputStream data to NFC.");
         final String nfcConvertedContent = NfcHelper.nfcConverter(content);
-        return new NfcServletInputStream(new ByteArrayInputStream(nfcConvertedContent.getBytes()));
+        return new NfcServletInputStream(new ByteArrayInputStream(nfcConvertedContent.getBytes(StandardCharsets.UTF_8)));
     }
 
     private HttpServletRequest getOriginalRequest() {
